--- a/src/Project/example/CMakeLists.txt
+++ b/src/Project/example/CMakeLists.txt
@@ -4,4 +4,4 @@ project(test_PW)
 set(CMAKE_CXX_STANDARD 14)
 
 include_directories(/tools/Xilinx/Vivado/2019.1/include)
-add_executable(test_PW matrixmul.cpp matrixmul_test.cpp)
+add_executable(matrixmul matrixmul.cpp matrixmul_test.cpp)
